@startuml

skinparam linetype ortho

skinparam entity {
    BackgroundColor White
    BorderColor Black
}


'==============================
' ENTITIES
'==============================


entity Locations {

    __LocationID__ : INT
    --
    Name : VARCHAR
    Type : ENUM(Head, Branch)
    Address : VARCHAR
    City : VARCHAR
    Province : VARCHAR
    PostalCode : VARCHAR
    Phone : VARCHAR
    WebAddress : VARCHAR
    Capacity : INT
}



entity Personnel {

    __PersonnelID__ : INT
    --
    FirstName : VARCHAR
    LastName : VARCHAR
    DOB : DATE
    SSN : VARCHAR UNIQUE
    MedicareNo : VARCHAR UNIQUE
    Phone : VARCHAR
    Email : VARCHAR
    Address : VARCHAR
    City : VARCHAR
    Province : VARCHAR
    PostalCode : VARCHAR
    Role : ENUM
    Mandate : ENUM
}



entity Personnel_Assignment {

    __AssignmentID__ : INT
    --
    StartDate : DATE
    EndDate : DATE
    PersonnelID : INT FK
    LocationID : INT FK
}



entity ClubMembers {

    __MemberID__ : INT
    --
    FirstName : VARCHAR
    LastName : VARCHAR
    DOB : DATE
    Height : FLOAT
    Weight : FLOAT
    SSN : VARCHAR UNIQUE
    MedicareNo : VARCHAR UNIQUE
    Phone : VARCHAR
    Address : VARCHAR
    City : VARCHAR
    Province : VARCHAR
    PostalCode : VARCHAR
    MemberType : ENUM(Major, Minor)
}



entity Member_Location_History {

    __HistoryID__ : INT
    --
    StartDate : DATE
    EndDate : DATE
    MemberID : INT FK
    LocationID : INT FK
}



entity FamilyMembers {

    __FamilyID__ : INT
    --
    FirstName : VARCHAR
    LastName : VARCHAR
    DOB : DATE
    SSN : VARCHAR UNIQUE
    MedicareNo : VARCHAR UNIQUE
    Phone : VARCHAR
    Email : VARCHAR
    Address : VARCHAR
    City : VARCHAR
    Province : VARCHAR
    PostalCode : VARCHAR
}



entity Family_Location_History {

    __HistoryID__ : INT
    --
    StartDate : DATE
    EndDate : DATE
    FamilyID : INT FK
    LocationID : INT FK
}



entity FamilyRelationship {

    __FamilyID__ : INT
    __MemberID__ : INT
    __StartDate__ : DATE
    --
    EndDate : DATE
    RelationshipType : ENUM
}



entity Hobbies {

    __HobbyID__ : INT
    --
    HobbyName : VARCHAR
}



entity Member_Hobby {

    __MemberID__ : INT
    __HobbyID__ : INT
}



entity Payments {

    __PaymentID__ : INT
    --
    PaymentDate : DATE
    Amount : DECIMAL
    Method : ENUM
    MembershipYear : INT
    MemberID : INT FK
}



entity Teams {

    __TeamID__ : INT
    --
    TeamName : VARCHAR
    Gender : ENUM(Boys, Girls)
    LocationID : INT FK
}



entity Team_Members {

    __TeamID__ : INT
    __MemberID__ : INT
    --
    StartDate : DATE
    EndDate : DATE
}



entity FIFA_Games {

    __GameID__ : INT
    --
    GameDate : DATE
    LocationID : INT FK
    OpponentTeam : VARCHAR
    Score : VARCHAR
}



entity Game_Participation {

    __MemberID__ : INT
    __GameID__ : INT
    --
    TeamID : INT FK
}



'==============================
' RELATIONSHIPS
'==============================


' Location - Club Members
Locations ||--o{ Member_Location_History : "has history"

ClubMembers ||--o{ Member_Location_History : "assigned"



' Location - Personnel

Locations ||--o{ Personnel_Assignment : "employs"

Personnel ||--o{ Personnel_Assignment : "works"



' Location - Family Members

Locations ||--o{ Family_Location_History : "has history"

FamilyMembers ||--o{ Family_Location_History : "assigned"



' Family Relationship

FamilyMembers ||--o{ FamilyRelationship : "guardian"

ClubMembers ||--o{ FamilyRelationship : "child"



' Hobbies

ClubMembers ||--o{ Member_Hobby : "has"

Hobbies ||--o{ Member_Hobby : "contains"



' Payments

ClubMembers ||--o{ Payments : "makes"



' Teams

Locations ||--o{ Teams : "hosts"


ClubMembers ||--o{ Team_Members : "joins"

Teams ||--o{ Team_Members : "contains"



' FIFA Games

Teams ||--o{ FIFA_Games : "plays"

ClubMembers ||--o{ Game_Participation : "participates"

FIFA_Games ||--o{ Game_Participation : "includes"

Teams ||--o{ Game_Participation : "represents"



@enduml